--- a/MSVS/LibNBT++/LibNBT++.vcxproj.filters
+++ b/MSVS/LibNBT++/LibNBT++.vcxproj.filters
@@ -101,5 +101,20 @@
     <ClInclude Include="..\..\lib\nbtplusplus\value_initializer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\lib\nbtplusplus\io\izlibstream.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lib\nbtplusplus\io\ozlibstream.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lib\nbtplusplus\io\stream_reader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lib\nbtplusplus\io\stream_writer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\lib\nbtplusplus\io\zlib_streambuf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
