--- a/MSVS/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj
+++ b/MSVS/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj
@@ -155,22 +155,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\include\biomes.h" />
-    <ClInclude Include="..\..\include\blockentities.h" />
-    <ClInclude Include="..\..\include\blocks.h" />
-    <ClInclude Include="..\..\include\client.h" />
-    <ClInclude Include="..\..\include\clientevents.h" />
-    <ClInclude Include="..\..\include\datatypes.h" />
-    <ClInclude Include="..\..\include\entities.h" />
-    <ClInclude Include="..\..\include\eventhandler.h" />
-    <ClInclude Include="..\..\include\lib\thread-pool\thread_pool.hpp" />
-    <ClInclude Include="..\..\include\lockedclient.h" />
-    <ClInclude Include="..\..\include\nbt.h" />
-    <ClInclude Include="..\..\include\networkhandler.h" />
-    <ClInclude Include="..\..\include\networkpackets.h" />
-    <ClInclude Include="..\..\include\server.h" />
-    <ClInclude Include="..\..\include\serverevents.h" />
-    <ClInclude Include="..\..\include\uuid.h" />
+    <ClInclude Include="..\..\include\bbms\biomes.h" />
+    <ClInclude Include="..\..\include\bbms\blockentities.h" />
+    <ClInclude Include="..\..\include\bbms\blocks.h" />
+    <ClInclude Include="..\..\include\bbms\client.h" />
+    <ClInclude Include="..\..\include\bbms\clientevents.h" />
+    <ClInclude Include="..\..\include\bbms\datatypes.h" />
+    <ClInclude Include="..\..\include\bbms\entities.h" />
+    <ClInclude Include="..\..\include\bbms\eventhandler.h" />
+    <ClInclude Include="..\..\include\bbms\lockedclient.h" />
+    <ClInclude Include="..\..\include\bbms\nbt.h" />
+    <ClInclude Include="..\..\include\bbms\networkhandler.h" />
+    <ClInclude Include="..\..\include\bbms\networkpackets.h" />
+    <ClInclude Include="..\..\include\bbms\server.h" />
+    <ClInclude Include="..\..\include\bbms\serverevents.h" />
+    <ClInclude Include="..\..\include\bbms\uuid.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\biomes.cpp" />
