--- a/MSVS/Minecraft Server.vcxproj
+++ b/MSVS/Minecraft Server.vcxproj
@@ -45,7 +45,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)/../include;$(ProjectDir)/..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)/..;$(ProjectDir)/../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -60,7 +60,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)/../include;$(ProjectDir)/..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)/..;$(ProjectDir)/../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -88,21 +88,6 @@
     <ClInclude Include="..\tests\string\stringtest.h" />
     <ClInclude Include="..\tests\uuid\uuidtest.h" />
     <ClInclude Include="..\tests\varnum\varnumtest.h" />
-    <ClInclude Include="..\include\client\client.h" />
-    <ClInclude Include="..\include\client\clientevents.h" />
-    <ClInclude Include="..\include\data\atomicset.h" />
-    <ClInclude Include="..\include\data\biomes.h" />
-    <ClInclude Include="..\include\data\blocks.h" />
-    <ClInclude Include="..\include\data\networkpackets.h" />
-    <ClInclude Include="..\include\data\datatypes.h" />
-    <ClInclude Include="..\include\data\entity\blockentities.h" />
-    <ClInclude Include="..\include\data\entity\entities.h" />
-    <ClInclude Include="..\include\debug.h" />
-    <ClInclude Include="..\include\deprecated.h" />
-    <ClInclude Include="..\include\server\eventhandler.h" />
-    <ClInclude Include="..\include\server\networkhandler.h" />
-    <ClInclude Include="..\include\server\server.h" />
-    <ClInclude Include="..\include\server\serverevents.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
